static/css/base.css
/*----  General styles ---*/
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');

/* General styling */
html, body{
    margin: 0;
    padding: 0;  
    max-width: 100%;
    overflow-x: initial hidden;
    height: 100%;
}

body{
    font-family: 'Noto Sans KR', sans-serif;
}

/* to push down other elements to give space for navbar */
.pillow{
    padding-top: 97px;
}
/* Navbar */
#logo{
    width: 5em;
}

/* Index page */
#hero{
    position: relative;
    text-align: center;
    color: white;
    width: 100%;
    margin: auto;
    max-height: 800px;
    overflow: hidden;
}

#slogan{
    font-weight: 500;
}

.centered {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -50%);
}



/* Hero image slideshow container */
.hero-image{
    width: 100%;
}

/* Fading animation */
.fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 4s;
    animation-name: fade;
    animation-duration: 4s;
}

@-webkit-keyframes fade {
    from {opacity: 0.4} 
    to {opacity: 1}
}

@keyframes fade {
    from {opacity: 0.4} 
    to {opacity: 1}
}

/* Intro section under hero slideshow */
.intro-text{
    padding: 15px 20px;
    font-size: 1.2em;
    margin-bottom: 0;
}

.intro-section{
    background-color: #262626;
    padding: 20px 0;
}

/* to scale width vs height of the image within div */
.box-image{
    position: relative;
    overflow: hidden;
    width: 100%;
    height: auto;
}

/* Urban, all-road, road section on home page */
.feat-image{
    width: 100%;
}

.box-urban{
    background-color: rgba(83, 55, 15, 0.858);
}

.box-all-road{
    background-color: #751d1a;
}

.box-road{
    background-color: #0b173d;
}

.box-urban, 
.box-all-road,
.box-road{
    padding: 50px 50px;
}

/* Brands section */
.brands-section{
    background: #575757;
    padding-top: 15px;
}

.brand-img{
    max-width: 130px;
    height: auto;
    padding: 8px 5px;
}

.brands-text {
    padding-left: 16%;
    padding-right: 16%;
}

/* Products page */
#products{
    padding: 0;
}

.bikes-img{
    width: 100%;
}

/* Footer */
#footer{
    background-color: #262626;
    padding-top: 15px;
    flex-wrap: wrap;
}

.footer-links{
    padding-left: 15px;
}

.social li a i {
    height: 30px;
    width: 30px;
    border-radius: 30%;
    font-size: 30px;
    padding: 13px;
    text-align: center;
    color: #201766;
    color: white;
}


/* For various screen sizes */
/* Bigger screens */
@media only screen and (min-width: 1200px) {
    .intro-text{
        padding-left: 30%;
        padding-right: 30%;
        font-size: 3em;
    }
}

@media only screen and (min-width: 995px) {
    #main-menu{
        padding-left: 35%;
    }
    .intro-text{
        padding-left: 30%;
        padding-right: 30%;
        font-size: 2.5em;
    }
}

@media only screen and (min-width: 750px) {
    .intro-text{
        padding-left: 15%;
        padding-right: 15%;
        font-size: 1.5em;
    }
}

/* Smaller screens */
@media only screen and (max-width: 600px) {
    #slogan {
        font-size: 1.2em;
        font-weight: 400;
    }
    .centered {
        position: absolute;
        top: 70%;
        left: 50%;
        transform: translate(-50%, -50%);
    }
    #hero{
        padding-top: 110px;
    }
    .brands-text {
        padding-left: 5px;
        padding-right: 5px;
    }
}

